// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`RangePicker > should match the snapshot with custom class names 1`] = `
<DocumentFragment>
  <div
    class="grid gap-2"
  >
    <button
      aria-controls="radix-:r2:"
      aria-expanded="false"
      aria-haspopup="dialog"
      aria-label="Select date range"
      class="inline-flex items-center whitespace-nowrap rounded-md text-sm ring-offset-background transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 border border-input bg-background hover:bg-accent hover:text-accent-foreground h-9 px-4 py-2 justify-start text-left font-normal dark:bg-card"
      data-state="closed"
      id="date"
      type="button"
    >
      <svg
        class="lucide lucide-calendar mr-2 size-4 text-red-500"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M8 2v4"
        />
        <path
          d="M16 2v4"
        />
        <rect
          height="18"
          rx="2"
          width="18"
          x="3"
          y="4"
        />
        <path
          d="M3 10h18"
        />
      </svg>
      9/1/2023 - 9/15/2023
    </button>
  </div>
</DocumentFragment>
`;

exports[`RangePicker > should match the snapshot with default props 1`] = `
<DocumentFragment>
  <div
    class="grid gap-2"
  >
    <button
      aria-controls="radix-:r0:"
      aria-expanded="false"
      aria-haspopup="dialog"
      aria-label="Select date range"
      class="inline-flex items-center whitespace-nowrap rounded-md text-sm ring-offset-background transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 border border-input bg-background hover:bg-accent hover:text-accent-foreground h-9 px-4 py-2 justify-start text-left font-normal dark:bg-card"
      data-state="closed"
      id="date"
      type="button"
    >
      <svg
        class="lucide lucide-calendar mr-2 size-4"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M8 2v4"
        />
        <path
          d="M16 2v4"
        />
        <rect
          height="18"
          rx="2"
          width="18"
          x="3"
          y="4"
        />
        <path
          d="M3 10h18"
        />
      </svg>
      Date de début - Date de fin
    </button>
  </div>
</DocumentFragment>
`;

exports[`RangePicker > should match the snapshot with selected date range 1`] = `
<DocumentFragment>
  <div
    class="grid gap-2"
  >
    <button
      aria-controls="radix-:r1:"
      aria-expanded="false"
      aria-haspopup="dialog"
      aria-label="Select date range"
      class="inline-flex items-center whitespace-nowrap rounded-md text-sm ring-offset-background transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 border border-input bg-background hover:bg-accent hover:text-accent-foreground h-9 px-4 py-2 justify-start text-left font-normal dark:bg-card"
      data-state="closed"
      id="date"
      type="button"
    >
      <svg
        class="lucide lucide-calendar mr-2 size-4"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M8 2v4"
        />
        <path
          d="M16 2v4"
        />
        <rect
          height="18"
          rx="2"
          width="18"
          x="3"
          y="4"
        />
        <path
          d="M3 10h18"
        />
      </svg>
      9/1/2023 - 9/15/2023
    </button>
  </div>
</DocumentFragment>
`;
